--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "release": "yarn build && auto shipit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_23c0ba0842a50c8"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -74,5 +75,7 @@
   },
   "resolutions": {
     "jackspeak": "2.1.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "learnstorybook-design-system-template@0.1.0"
 }
